# DistributedFileSystem

./: .dockerignore  .env.example  .flaskenv  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.storage-node  Pipfile  README.md  deploy.sh  dfs-architecture.mermaid  docker-compose.yml  env.template  manifests.yaml  prometheus.yml  pytest.ini  requirements.txt  run.py  run_example.py  run_tests.py  setup.py  skaffold.yaml  test-requirements.txt  test.txt  test_download.txt  wsgi.py
.github/workflows/: ci.yml
API/: CMakeLists.txt  app.py  config.py  fs_manager_binding.cpp  mock_fs_manager.py  requirements.txt  s3_api.py  storage_backend.py
backups/$(date +%Y%m%d_%H%M%S)/k8s/: api-deployment.yaml  load-testing.yaml  storage-node.yaml
backups/20241122_022721/k8s/: web-deployment.yaml
backups/20241122_022721/kubernetes/: monitoring-deployment.yaml
cmake-build/: dfs_cli  manager_test  storage_server  storage_test
config/: policy_overrides.json
csi-driver/: Dockerfile  go.mod
csi-driver/cmd/: main.go
csi-driver/deploy/: dfs-csi-driver.yaml
csi-driver/pkg/driver/: driver.go
dev/: Dockerfile.dev  README.md  run_tests.sh
dev/config/: docker-compose.dev.yml  haproxy.cfg
dev/examples/: custom_policy_example.py  dashboard_example.py  distributed_metrics_example.py  policy_scenarios.py  run_example.py  s3_metrics_example.py  simulation_example.py  test_builder_example.py
dev/scripts/: node_management.py  setup-credentials.py  test_file_ops.py  update_imports.py
dev/simulation/: __init__.py  data_store.py  network_simulator.py  scenario_config.py  scenario_simulator.py  simulated_collector.py
dev/tests/: conftest.py  requirements.txt  run_tests.py  test-requirements.txt
dev/tests/common/: hybrid_storage_fixtures.py  test_helpers.py  test_utils.py
dev/tests/integration/: conftest.py  test_distributed_metrics.py  test_hybrid_storage.py  test_hybrid_storage_integration.py
dev/tests/performance/: requirements.txt  test_hybrid_storage_performance.py  test_system_performance.py
dev/tests/unit/: test_config.py  test_consistency_manager.py
dev/tools/: test_builder.py
distributed_file_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: advanced-policies.mermaid  api_endpoints.md  data-management.mermaid  hybrid-storage-strategy.mermaid  storage-policies.mermaid  system-architecture.mermaid  write-flow.mermaid
examples/: custom_policy_example.py  policy_scenarios.py  s3_metrics_example.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  setupTests.js
frontend/src/components/: DashboardMetrics.js
grafana/config/: grafana.ini
grafana/dashboards/: dfs-metrics.json  dfs-overview.json  dfs_overview.json  load_testing.json  node_health.json
grafana/data/: grafana.db
grafana/provisioning/dashboards/: dfs.yaml  dfs_dashboards.yaml
grafana/provisioning/datasources/: default.yaml  prometheus.yaml
include/manager/: FileSystemManager.h
include/storage/: StorageNode.h  storage_service.h
k8s/: api-deployment.yaml  monitoring-deployment.yaml  storage-node.yaml
k8s/base/: backup-plan.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  storage-node-deployment.yaml  test-pod.yaml  test-pvc.yaml
k8s/overlays/development/: storage-class-patch.yaml
kubernetes/: api-deployment.yaml
kubernetes/base/: namespace.yaml  pv.yaml  pvc-template.yaml  statefulset.yaml  storage-class.yaml  storage-node-crd.yaml
metrics_report/: metrics_summary_20241120_133500.txt
monitoring/: metrics.py
proto/: storage.grpc.pb.cc  storage.pb.h  storage.proto
scripts/: open_uis.sh  setup-cloud-secrets.sh  setup-dev.sh  start_dev.sh  test-azure-connection.py  test-gcp-provider.py  update_imports.py
src/: main.cpp
src/api/: Dockerfile  __init__.py  app.py  config.py  mock_fs_manager.py  models.py  requirements.txt  s3_api.py  storage_backend.py
src/config/: __init__.py  base_config.py  cluster_config.json  infrastructure_config.py
src/csi/: Dockerfile  __init__.py  driver.py  entrypoint.sh  requirements.txt  storage_manager.py
src/docs/: ml-policies.mermaid
src/examples/: custom_policy_example.py  dashboard_example.py  distributed_metrics_example.py  policy_scenarios.py  run_example.py  s3_metrics_example.py  simulation_example.py
src/infrastructure/: manager.py
src/k8s/: README.md
src/manager/: FileSystemManager.cpp  FileSystemManager.h
src/models/: models.py
src/monitoring/: Dockerfile  app.py  metrics.py  requirements.txt
src/requirements/: requirements-test.txt  requirements.txt
src/scripts/: cloud_provider_tests.py  cluster_config.yaml  deploy-csi.sh  deploy.sh  dfs-env.sh  load-env-to-k8s.sh  node_management.py  open_uis.sh  run-load-tests.sh  setup.sh  start_dev.sh  start_dfs.sh  test-azure-connection.py  test-cloud-providers.py  test-gcp-connection.py  test-gcp-provider.py  test_file_ops.py
src/simulation/: data_store.py  network_simulator.py  scenario_config.py  scenario_simulator.py  simulated_collector.py
src/storage/: Dockerfile  StorageNode.cpp  StorageNode.h  hybrid_storage.py  models.py  node.py  storage_server.cpp  storage_service.cpp
src/storage-node/: Dockerfile  go.mod  go.sum
src/tests/: conftest.py  run_tests.py
src/web/: __init__.py
storage-node/: Dockerfile
storage-node/cmd/: main.go
tests/: CMakeLists.txt  __init__.py  conftest.py  system_test.py  test_bucket_operations.py  test_config.py  test_utils.py
tests/integration/: __init__.py
tests/integration/storage/: test_storage.py
tests/integration/storage/cloud/: test_providers_integration.py
tests/load/: Dockerfile  docker-compose.load.yml  locustfile.py
tests/manager_tests/: manager_test.cpp
tests/performance/: __init__.py  system_test.py
tests/performance/storage/: __init__.py
tests/storage_tests/: storage_test.cpp
tests/storage_tests/cache/: test_cache_store.py  test_sync_manager.py
tests/unit/: __init__.py
tests/unit/storage/: test_policy.py
tests/unit/storage/cloud/: test_hybrid.py  test_metrics_store.py  test_providers.py
(+210 files in other folders)
